--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <section id="main-content">
-      <img src="" alt="">
+      <img src="assets/Image_01.jpg" alt="Imagem da paisagem de Busan, na coreia do Sul">
       <p>Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.</p>
     </section>
 
@@ -25,21 +25,21 @@
       Os santuários budistas que pontilham a costa e as montanhas de Busan têm uma arquitetura impressionante que irá encantar os fotógrafos.</p>
 
       <ol>
-        <img src="" alt="">
+        <img src="assets/Image_02.png" alt="Imagem do Templo Haedong Yonggungsa">
         <h3><li>Templo Haedong Yonggungsa </li></h3>
         <p>O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar – você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro. 
         <br><br>
         <strong>Bom para:</strong></p>
         <ul><li>História</li></ul>
 
-        <img src="" alt="">
+        <img src="assets/Image_03.png" alt="Imagem do Templo Beomeo-sa">
         <h3><li>Templo Beomeo-sa</li></h3>
         <p>O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.
         <br><br>
         <strong>Bom para:</strong> </p>
         <ul><li>História</li></ul>
 
-        <img src="" alt="">
+        <img src="assets/Image_04.png" alt="Imagem do Parque Yongdusan">
         <h3><li>Parque Yongdusan</li></h3>
         <p>O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats. <br><br>
         <strong>Bom para:</strong>
