--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div id="page">
+  <div id="page"> 
     <header>
       <p id="headline"><strong>Sua próxima viagem:</strong></p>
       <h1>Conheça Busan</h1>
@@ -24,10 +24,12 @@
 
     <section id="content-list">
       <div id="divisor"></div>
-      <p id="headline"><strong>Para os amantes de história</strong></p>
-      <h2>Descubra 3 destinos imperdíveis em Busan</h2>
-      <p>As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos. <br>
-      Os santuários budistas que pontilham a costa e as montanhas de Busan têm uma arquitetura impressionante que irá encantar os fotógrafos.</p>
+      <div id="title-list">
+        <p id="headline"><strong>Para os amantes de história</strong></p>
+        <h2>Descubra 3 destinos imperdíveis em Busan</h2>
+        <p>As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos. <br>
+        Os santuários budistas que pontilham a costa e as montanhas de Busan têm uma arquitetura impressionante que irá encantar os fotógrafos.</p>
+      </div>
 
       <ol>
         <img src="assets/Image_02.png" alt="Imagem do Templo Haedong Yonggungsa">
@@ -54,12 +56,17 @@
           <li>Famílias</li>
           <li>Orçamento</li>
         </ul>
-      </ol>
+      </ol>  
+    </section>
 
       <div id="divisor"></div>
-
       <p id="description">As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto marítimo na Ásia. Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de diversidade étnica e cultural, já que a cidade recebe um público cosmopolita o ano todo. </p>
-    </section>
-  </div>
+    </div>
+    
+    <footer>
+      feito com 
+      <img src="assets/ph_heart-fill.svg" alt="Coraçãozinho preto">
+      pela Rocketseat
+    </footer>
 </body>
 </html>
